--- a/css/styles.css
+++ b/css/styles.css
@@ -671,3 +671,192 @@ button {
 .ads:focus .acapit-fig {
     transform: translateY(0);
 }
+.acapit-subcribe{
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+.subscribe-input{
+    background-color: #2e2f42;
+    border-radius: 4px;
+    border: 1px solid #ffffff;
+    width: 264px;
+    height: 40px;
+    color: #ffffff;
+}
+.subcribe-button{
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    text-align: center;
+    color:#ffffff;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.64px;
+}
+.subscribe-footer{
+    width: 453px;
+    height: 80px;
+
+}
+.footer-media{
+    margin-right: 80px;
+}
+.subscribe-list{
+    display: flex;
+    gap: 24px;
+    list-style: none;
+}
+.svg-input input{
+    border: none;
+}
+input:focus {
+    outline: none;
+}
+input::placeholder{
+    color: #ffffff;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+}
+label{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4px;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    /* 116.667% */
+    letter-spacing: 0.48px;
+}
+.inputs{
+    gap:24px;
+    margin: 16px 24px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+.inputs:focus-within{
+    border-color: #4d5ae5;
+}
+.inputs-list{
+    list-style: none;
+}
+.icons-modal{
+    color:#2e2f42;
+    margin:11px 0 11px 16px;
+    fill: currentColor;
+}
+.svg-input{
+    display: flex;
+    width: 360px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #2e2f42;
+}
+.svg-input:focus {
+    border: 1px solid #4d5ae5;
+    color: #4d5ae5;
+}
+.textarea{
+    width: 360px;
+    height: 120px;
+    border: 1px solid #2e2f42;
+    border-radius: 4px;
+    overflow: hidden;
+}
+textarea{
+    border-radius: 4px;
+    resize: none;
+    width: 360px;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+}
+.svg-input:focus-within{
+    border-color: #4d5ae5;
+}
+.icons-modal:focus{
+    color: #4d5ae5;
+}
+.acapit-modal{
+    padding: 72px 24px 16px 24px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.32px;
+}
+textarea::placeholder{
+    padding-left: 16px;
+    padding-top: 8px;
+}
+.privacy-policy{
+    color: #4d5ae5;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0.48px;
+    text-decoration-line: underline;
+    text-decoration: underline;
+}
+.check-box{
+    display: flex;
+    flex: start;
+    width: 360px;
+    height: 16px;
+    gap: 24px;
+}
+.check-box input{
+    overflow: none;
+}
+.acapit-check-box{
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    /* 116.667% */
+    letter-spacing: 0.48px;
+    color: #8E8F99;
+}
+.button-send{
+    background-color: #4D5AE5;
+    color: #ffffff;
+    padding: 16px 32px;
+    align-items: flex-start;
+    width: 105px;
+    height: 24px;
+    gap: 10px;
+    border-radius: 4px;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+    letter-spacing: 0.64px;
+    text-align: center;
+}
+.button-send-modal{
+    display: inline-flex;
+    padding: 24px 120px 24px 119px;
+    align-items: center;
+}
