--- a/css/styles.css
+++ b/css/styles.css
@@ -682,29 +682,40 @@ button {
     margin-bottom: 16px;
 }
 .subscribe-input{
-    background-color: #2e2f42;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.15);
     border-radius: 4px;
     border: 1px solid #ffffff;
     width: 264px;
     height: 40px;
     color: #ffffff;
 }
+.subscribe-input::placeholder{
+    color: #ffffff;
+}
 .subcribe-button{
-    background-color: #4d5ae5;
-    border-radius: 4px;
-    display: inline-flex;
-    padding: 8px 24px;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
-    text-align: center;
-    color:#ffffff;
     font-family: Roboto;
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.64px;
+    color:#ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+}
+.subscribe-svg{
+    margin-left: 16px;
 }
 .subscribe-footer{
     width: 453px;
@@ -859,4 +870,10 @@ textarea::placeholder{
     display: inline-flex;
     padding: 24px 120px 24px 119px;
     align-items: center;
+}
+.subscribe-form{
+    display: flex;
+}
+.subcribe-label{
+    gap: 24px;
 }
