--- a/css/styles.css
+++ b/css/styles.css
@@ -593,6 +593,7 @@ button {
 .modal{
     position: absolute;
     left: 50%;
+    padding: 72px 24px 24px 24px;
     right: 50%;
     top: 50%;
     width: 408px;
