--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
     --footer-link-background-color: #4d5ae5;
     --footer-svg-fill: #f4f4fd;
     --acapit-fig-color: #f4f4fd;
+    --acapit-modal-color:#2e2f42;
+    --modal-label-text-color:#8e8f99;
 }
 * {
     box-sizing: border-box;
@@ -771,16 +773,18 @@ label{
     list-style: none;
 }
 .icons-modal{
+position: absolute;
+left: 16px;
+top:50%;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
     color:#2e2f42;
     margin:11px 0 11px 16px;
     fill: currentColor;
 }
 .svg-input{
-    display: flex;
-    width: 360px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid #2e2f42;
+    margin-bottom: 8px;
 }
 .svg-input:focus {
     border: 1px solid #4d5ae5;
@@ -815,6 +819,9 @@ textarea{
     line-height: 24px;
     /* 150% */
     letter-spacing: 0.32px;
+    text-align: center;
+    color: var(--acapit-modal-color);
+    margin-bottom: 16px;
 }
 textarea::placeholder{
     padding-left: 16px;
@@ -877,4 +884,30 @@ textarea::placeholder{
 .subscribe-form{
     display: flex;
     gap: 24px;
+}
+.modal-label{
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--modal-label-text-color);
+    display: block;
+    margin-bottom: 4px;
+}
+.svg-input-icons{
+    position: relative;
+}
+.input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46,47,66,0.4)0;
+    border-radius: 4px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.input:focus{
+    border-color: #4d5ae5;
+}
+.input:focus-within{
+    fill: #4d5ae5;
 }
