--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
     --acapit-fig-color: #f4f4fd;
     --acapit-modal-color:#2e2f42;
     --modal-label-text-color:#8e8f99;
+    --check-label-color:#8e8f99;
 }
 * {
     box-sizing: border-box;
@@ -786,19 +787,26 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border: 1px solid #4d5ae5;
     color: #4d5ae5;
 }
-.textarea{
-    width: 360px;
-    height: 120px;
-    border: 1px solid #2e2f42;
-    border-radius: 4px;
-    overflow: hidden;
+.textarea-div{
+    margin-bottom: 16px;
 }
-textarea{
-    border-radius: 4px;
-    resize: none;
-    width: 360px;
+.textarea{
+    width: 100%;
     height: 120px;
-    border: 1px solid rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea:focus{
+    border-color: #4d5ae5;
 }
 .svg-input:focus-within{
     border-color: #4d5ae5;
@@ -835,11 +843,27 @@ textarea::placeholder{
     text-decoration: underline;
 }
 .check-box{
-    display: flex;
-    flex: start;
-    width: 360px;
+    margin-bottom: 24px;
+}
+.check-label{
+    display: block;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--check-label-color);
+}
+.privacy-policy{
+    width: 16px;
     height: 16px;
-    gap: 24px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
 }
 .check-box input{
     overflow: none;
@@ -895,8 +919,9 @@ textarea::placeholder{
 .input{
     width: 100%;
     height: 40px;
-    border: 1px solid rgba(46,47,66,0.4)0;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+    padding-left: 38px;
     background-color: transparent;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
