--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
     --acapit-modal-color:#2e2f42;
     --modal-label-text-color:#8e8f99;
     --check-label-color:#8e8f99;
+    --link-privacy-color:#4d5ae5;
 }
 * {
     box-sizing: border-box;
@@ -845,6 +846,9 @@ textarea::placeholder{
 .check-box{
     margin-bottom: 24px;
 }
+.check-input{
+    visibility: hidden;
+}
 .check-label{
     display: block;
     font-size: 12px;
@@ -865,6 +869,9 @@ textarea::placeholder{
     justify-content: center;
     fill: transparent;
 }
+.link-privacy{
+    color: var(link-privacy-color);
+}
 .check-box input{
     overflow: none;
 }
@@ -879,22 +886,20 @@ textarea::placeholder{
     color: #8E8F99;
 }
 .button-send{
-    background-color: #4D5AE5;
-    color: #ffffff;
-    padding: 16px 32px;
-    align-items: flex-start;
-    width: 105px;
-    height: 24px;
-    gap: 10px;
-    border-radius: 4px;
-    font-family: Roboto;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto",sans-serif;
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
-    line-height: 24px;
-    /* 150% */
-    letter-spacing: 0.64px;
-    text-align: center;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-send-modal{
     display: inline-flex;
