--- a/css/styles.css
+++ b/css/styles.css
@@ -723,6 +723,7 @@ button {
 }
 .subscribe-svg{
     margin-left: 16px;
+    fill: #ffffff;
 }
 .subscribe-footer{
     width: 453px;
@@ -816,7 +817,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #4d5ae5;
 }
 .acapit-modal{
-    padding: 72px 24px 16px 24px;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -920,6 +920,8 @@ textarea::placeholder{
 }
 .svg-input-icons{
     position: relative;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
 }
 .input{
     width: 100%;
