--- a/css/styles.css
+++ b/css/styles.css
@@ -776,6 +776,7 @@ label{
     list-style: none;
 }
 .icons-modal{
+    fill: #2E2F42;
 position: absolute;
 left: 16px;
 top:50%;
@@ -922,6 +923,9 @@ textarea::placeholder{
     position: relative;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+}
+.svg-input-icons:focus{
+    border-color: #4d5ae5;
 }
 .input{
     width: 100%;
