--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
     --modal-label-text-color:#8e8f99;
     --check-label-color:#8e8f99;
     --link-privacy-color:#4d5ae5;
+    --pressed-state-color: #4d5ae5;
 }
 * {
     box-sizing: border-box;
@@ -738,9 +739,6 @@ button {
     gap: 24px;
     list-style: none;
 }
-.svg-input input{
-    border: none;
-}
 input:focus {
     outline: none;
 }
@@ -850,6 +848,23 @@ textarea::placeholder{
 .check-input{
     visibility: hidden;
 }
+.check-input:checked + .check-label span{
+    background-color: var(--pressed-state-color);
+    fill: #f4f4fd;
+    border: none;
+}
+.privacy-policy{
+    display: inline-flex;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    margin-right: 8px;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4,0,0.2,1),
+     border 250ms cubic-bezier(0.4,0,0.2,1),
+    fill 250ms cubic-bezier(0.4,0,0.2,1);
+}
 .check-label{
     display: block;
     font-size: 12px;
@@ -921,7 +936,6 @@ textarea::placeholder{
 }
 .svg-input-icons{
     position: relative;
-    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
 }
 .svg-input-icons:focus{
@@ -932,8 +946,11 @@ textarea::placeholder{
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+    outline: none;
     padding-left: 38px;
     background-color: transparent;
-    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
+}
+.input:focus{
+    border-color: #4d5ae5;
 }
