--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
     --modal-label-text-color:#8e8f99;
     --check-label-color:#8e8f99;
     --link-privacy-color:#4d5ae5;
-    --pressed-state-color: #4d5ae5;
+    --pressed-state-color: #404bbf;
 }
 * {
     box-sizing: border-box;
@@ -886,7 +886,7 @@ textarea::placeholder{
     fill: transparent;
 }
 .link-privacy{
-    color: var(link-privacy-color);
+    color: var(--link-privacy-color);
 }
 .check-box input{
     overflow: none;
@@ -946,7 +946,7 @@ textarea::placeholder{
     height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    outline: none;
+    outline: transparent;
     padding-left: 38px;
     background-color: transparent;
     transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
