--- a/css/styles.css
+++ b/css/styles.css
@@ -774,19 +774,19 @@ label{
     list-style: none;
 }
 .icons-modal{
-    fill: #2E2F42;
-position: absolute;
-left: 16px;
-top:50%;
-transform: translateY(-50%);
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    left: 16px;
+    top:50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .svg-input{
     margin-bottom: 8px;
 }
 .svg-input:focus {
     border: 1px solid #4d5ae5;
-    color: #4d5ae5;
+    fill: #4d5ae5;
 }
 .textarea-div{
     margin-bottom: 16px;
@@ -915,6 +915,7 @@ textarea::placeholder{
     background-color: #4d5ae5;
     border: none;
     border-radius: 4px;
+    margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-send-modal{
@@ -938,8 +939,8 @@ textarea::placeholder{
     position: relative;
     border-radius: 4px;
 }
-.svg-input-icons:focus{
-    border-color: #4d5ae5;
+.svg-input-icons:focus svg{
+    fill: #4d5ae5;
 }
 .input{
     width: 100%;
@@ -953,4 +954,7 @@ textarea::placeholder{
 }
 .input:focus{
     border-color: #4d5ae5;
+}
+.input:focus svg{
+    fill: #4d5ae5;
 }
