--- a/css/styles.css
+++ b/css/styles.css
@@ -947,7 +947,7 @@ textarea::placeholder{
     transition: border-color 250ms cubic-bezier(0.4,0,0.2,1);
 }
 .input:focus + .icons-modal{
-    border-color: #4d5ae5;
+    border-color: #4D5AE5;
     fill: #4d5ae5;
 }
 .privacy-policy-icons{
